--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,17 @@ sudo: required
 services:
   - docker
 
+deploy:
+  provider: elasticbeanstalk
+  access_key_id: $ACCESSKEYID
+  secret_access_key:
+    secure: "$SECRETACCESSKEY"
+  region: "us-east-1"
+  app: "elastic-beanstalk-tutorial"
+  env: "elastic-beanstalk-tutorial-dev"
+  bucket_name: "elasticbeanstalk-us-east-1-455445909749"
+  on:
+    branch: master
+
 after_deploy:
   - echo "done deploying"
