--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ services:
 deploy:
   provider: elasticbeanstalk
   access_key_id: $ACCESSKEYID
-  secret_access_key:
-    secure: "$SECRETACCESSKEY"
+  secret_access_key: "$SECRETACCESSKEY"
   region: "us-east-1"
   app: "elastic-beanstalk-tutorial"
   env: "elastic-beanstalk-tutorial-dev"
