--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,12 +1,11 @@
 branch-defaults:
   master:
     environment: elastic-beanstalk-tutorial-dev
-    group_suffix: null
 global:
   application_name: elastic-beanstalk-tutorial
   branch: null
   default_ec2_keyname: null
-  default_platform: Docker 17.03.1-ce
+  default_platform: Docker running on 64bit Amazon Linux
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
